# snake-sfml

./: .gitignore  CMakeLists.txt  CMakelists.txt  LICENSE
include/snake/: README.md  apple_logic.h  board_controller.h  board_graphic.h  board_logic.h  movements.h  object_controller.h  object_graphic.h  object_logic.h  snake-head-logic.h  snake_body_logic.h  snake_head-logic.h  snake_head_logic.h
src/snake/: README.md  board_controller.cc  board_graphic.cc  board_logic.cc  main.cc  object_controller.cc  object_graphic.cc  object_logic.cc  snake_body_logic.cc  snake_head_logic.cc
